--- a/Sim.Functions/BuildingSimFunctions.Rmd
+++ b/Sim.Functions/BuildingSimFunctions.Rmd
@@ -33,8 +33,10 @@ sim.yrs <- 500
 asp.effects <- c(-1,1)
 n.subpops <- length(asp.effects)
 reps <- 5
-clim.sds <- seq(0,20,by=4)
-asp.mags <- seq(0,20,by=2)
+clim.sds <- seq(0,30,by=4)
+asp.mags <- seq(0,30,by=2)
+
+testing
 ```
 
 
