Adding code for seed coarse and fine search

--- a/ModelFunctions/BuildingDemoModel.Rmd
+++ b/ModelFunctions/BuildingDemoModel.Rmd
@@ -138,6 +138,7 @@ write_csv(seed_df,"ModelFunctions/fecundity.csv")
 
 
 ### VERSION 2: Finding seed # (to set F cell) based on magnitude and direction of aspect effect PLUS LONG TERM LAMBDA
+# Coarse search
 ```{r seednumbers}
 
 n.subpops=2
@@ -217,26 +218,50 @@ stopCluster(cl)
 write_csv(seed_df_coarse,paste0("seeds_coarse_",round(Sys.time(),units="secs"),".csv"))
 ```
 
+
+# Fine search
 ```{r}
 
-cores = detectCores()
-cl = makeCluster(20)
-registerDoParallel(cl = cl)
+reps = 1
+clim.sd.i = 1
 
-reps = 2
+asp.mags <- seq(0,30,5)
+clim.sds <- seq(0,30,5)
+
+cores = detectCores()
+cl = makeCluster(10)
+registerDoParallel(cl = cl)
 
 seed_df_refined <- 
   foreach(r = 1:reps, .combine=rbind) %:%
    foreach(asp.mag.i = asp.mags, .combine=rbind, .packages=c("tidyverse","EnvStats")) %:% 
     foreach(clim.sd.i = clim.sds, .combine=rbind, .packages=c("tidyverse","EnvStats")) %dopar% {
       
-    # Starting values for while loop
+    # (Re)set starting values
     x <- 1
     
-    seeds <- seed_df_r1$seeds[seed_df_r1$asp.mag == asp.mag.i & seed_df_r1$clim.sd == clim.sd.i]
-
-    while(x>0.0005){
-
+    if(asp.mag.i %% 2 == 1){
+      seeds <- seed_df_coarse$seeds[seed_df_coarse$asp.mag == (asp.mag.i-1) & seed_df_coarse$clim.sd == (clim.sd.i - 1)]
+    } else {
+      seeds <- seed_df_r1$seeds[seed_df_r1$asp.mag == asp.mag.i & seed_df_r1$clim.sd == clim.sd.i]
+    }
+    
+    lt.lam <- 1.0005
+    
+    while(x>0.000005){
+      
+            
+      # If this is negative, then lt lam is too high and seed # needs to decrease
+      lam.diff = 1.0005 - lt.lam
+            
+      if(lam.diff < 0){ 
+          seeds <- seeds - ceiling(lt.lam*100)
+          } else if(lam.diff > 0) {
+            seeds <- seeds + ceiling(lt.lam*100)
+            } else if(lam.diff == 0){
+              seeds <- seeds
+              }
+      
       annual.df <- data.frame(yr=1:years, lam=NA)
 
       growth_params.i <- growth_params
@@ -244,7 +269,7 @@ seed_df_refined <-
       growth_params.i$asp.mag <- surv_params.i$asp.mag <- asp.mag.i
 
       for(yr in 1:years){
-
+        
         clim.yr <- rnorm(1,sd=clim.sd.i)
 
         growth_params.i$clim <- surv_params.i$clim <- clim.yr
@@ -276,16 +301,7 @@ seed_df_refined <-
       annual.df <- filter(annual.df, yr>burn.in)
       lt.lam <- geoMean(annual.df$lam)
       
-      x <- (1.0005-lt.lam)^2
-      
-      lam.diff = 1.0005 - lt.lam
-      
-      if(lam.diff < 0){ 
-        seeds <- seeds - 1
-      } else
-        if(lam.diff>0){
-          seeds <- seeds + 1
-        }
+      x <- (1.000005-lt.lam)^2
 
       } # End while loop
 
@@ -297,7 +313,6 @@ seed_df_refined <-
     return(tmp.df)
 }
 stopCluster(cl)
-
 ```
 
   
