--- a/Sim.Functions/BuildingSimFunctions.Rmd
+++ b/Sim.Functions/BuildingSimFunctions.Rmd
@@ -38,23 +38,24 @@ seeds_df <- read_csv("seedSearch_2024-11-14 09:27:34.519536.csv") %>%
 #### Testing out the simplest version of simulation
 ```{r S1_setup}
 # Things needed to run sim function line by line
-clim.sd.i <- clim.sd <- 2
+clim.sd.i <- clim.sd <- 1
 asp.mag <- asp.mag.i <- 2
 rep = 1
 move.rates.row <- 2
 
 # Sim. function inputs
-burn.in.yrs <- 100
-sim.yrs <- 500
+burn.in.yrs <- 50
+sim.yrs <- 100
 asp.effects <- c(-1,1)
 n.subpops <- length(asp.effects)
-reps <- 20
-clim.sds <- seq(0,25,by=1)
-asp.mags <- seq(0,20,by=1)
+reps <- 10
+clim.sds <- seq(0,20,by=2);clim.sds[clim.sds==0] <- 0.001
+asp.mags <- seq(0,20,by=2)
+rhos <- c(0,0.25,0.5)
 
 ## Creating all combinations of movement rates
 subpop.names = LETTERS[1:n.subpops] # Name subpops with letters
-move.rates = seq(0,0.05,0.005)
+move.rates = seq(0,0.1,0.02)
 move.dirs = expand.grid(from=subpop.names,to=subpop.names) %>% # get all combos
   # Remove rows that imply no movement (A to A)
   filter(from!=to) %>% 
@@ -73,14 +74,14 @@ names(move.rates.df)=move.dirs # rename columns to make movement direction clear
 rm(subpop.names,move.dirs,move.rates) # remove extra things from env
 
 #### Run S1 #####
-cores = detectCores()
 cl = makeCluster(20)
 registerDoParallel(cl = cl)
 
 S1_out_df <- foreach(rep = 1:reps, .combine = rbind,.packages=c("tidyverse","EnvStats")) %:% 
   foreach(move.rates.row = 1:nrow(move.rates.df), .combine = rbind,.packages=c("tidyverse","EnvStats")) %:%
     foreach(clim.sd.i = clim.sds, .combine = rbind,.packages=c("tidyverse","EnvStats")) %:%
-      foreach(asp.mag.i = asp.mags, .combine = rbind,.packages=c("tidyverse","EnvStats")) %dopar% {
+      foreach(asp.mag.i = asp.mags, .combine = rbind,.packages=c("tidyverse","EnvStats")) %:% 
+        foreach(rho.i = rhos,.combine = rbind,.packages=c("tidyverse","EnvStats")) %dopar% {
 
         move.rates.i <- move.rates.df[move.rates.row,]
         
@@ -90,17 +91,20 @@ S1_out_df <- foreach(rep = 1:reps, .combine = rbind,.packages=c("tidyverse","Env
         seeds.i = seeds_df$avg.seeds[seeds_df$asp.mag==asp.mag.i]
         
         df = simfun_exponential(burn.in.yrs=burn.in.yrs, sim.yrs=sim.yrs, n.subpops=n.subpops,asp.effects = asp.effects,
-                            clim.sd=clim.sd.i, asp.mag=asp.mag.i, move.mx = move.mx.i,seeds = seeds.i)
+                            clim.sd=clim.sd.i, asp.mag=asp.mag.i, move.mx = move.mx.i,seeds = seeds.i,rho = rho.i)
         
         tmp.df = df %>%
           filter(year>burn.in.yrs) %>% # Filter out burn-in years. This could also happen within the function.
           summarise(clim.mean = mean(clim),
                     clim.var = var(clim),
                     pop.var = var(pop.lam),
-                    lt.pop.lam = geoMean(pop.lam)) %>% 
+                    lt.pop.lam = geoMean(pop.lam),
+                    sub.corr = cor(s1,s2)) %>% 
           mutate(clim.sd = clim.sd.i,
+                 rho = rho.i,
                  asp.mag = asp.mag.i,
-                 rep = rep) %>% 
+                 rep = rep,
+                 asp.effects = list(asp.effects)) %>% 
           merge(.,move.rates.i)
         return(tmp.df)
       
@@ -109,36 +113,149 @@ S1_out_df <- foreach(rep = 1:reps, .combine = rbind,.packages=c("tidyverse","Env
       }
 stopCluster(cl)
 
-# write_csv(S1_out_df,paste0("Sim.Output/S1_ExpGrowth_SymMovement/S1_output_",round(Sys.time()),".csv"))
+# write_csv(S1_out_df,paste0("Sim.Output/S1_ExpGrowth_SymMovement/",round(Sys.time()),".csv"))
 ```
+
+```{r}
+plot_df <- S1_out_df %>% 
+group_by(clim.sd,asp.mag,move.rate = AtoB,rho) %>% 
+  summarize(agg.pop.var = mean(pop.var),
+            mean.corr = mean(sub.corr,na.rm = T),
+            agg.lt.pop.lam = mean(lt.pop.lam)) %>% 
+  mutate(asp.effects = c("-1, +1"))
+
+move.rates = c(0,0.04,0.1)
+
+plot.breaks = seq(0.5,1.3,0.1)
+neg.pal = brewer.pal(n = sum(plot.breaks<1),name = "YlOrBr")
+pos.pal = brewer.pal(n = 9,name = "Blues")[5:9]
+
+cols = c(rev(neg.pal),pos.pal)
+
+ggplot(filter(plot_df,move.rate %in%move.rates), aes(x=clim.sd,y=asp.mag,z=agg.lt.pop.lam))+
+  geom_contour_filled(breaks=plot.breaks)+
+  #scale_fill_manual(values = cols)+
+  facet_grid(rho~move.rate)
+
+```
+
+
+s1 = basic output
+s2 = same aspect but different aspect strengths
 
 #### Plot S1 results
 ```{r}
 
-S1_plot_df <- S1_out_df %>% 
+S1_plot_df <- read_csv(file = "Sim.Output/S1_ExpGrowth_SymMovement/S1_output_2024-11-23 09:00:01.csv") %>% 
   group_by(clim.sd,asp.mag,move.rate = AtoB) %>% 
   summarize(agg.pop.var = mean(pop.var),
-            agg.lt.pop.lam = mean(lt.pop.lam))
+            mean.corr = mean(sub.corr,na.rm = T),
+            agg.lt.pop.lam = mean(lt.pop.lam)) %>% 
+  mutate(asp.effects = c("-1, +1"))
 
-ggplot(S1_plot_df,aes(x=clim.sd,y=asp.mag,z=agg.lt.pop.lam))+
+S2_plot_df <- S2_out_df %>% 
+  group_by(clim.sd,asp.mag,move.rate = AtoB) %>% 
+  summarize(agg.pop.var = mean(pop.var),
+            mean.corr = mean(sub.corr,na.rm = T),
+            agg.lt.pop.lam = mean(lt.pop.lam)) %>% 
+  mutate(asp.effects = c("-1, -5"))
+
+move.rates = c(0,0.025,0.05,0.075,0.1)
+
+p11 <- ggplot(filter(S1_plot_df, move.rate %in% move.rates),aes(x=clim.sd,y=asp.mag,z=agg.lt.pop.lam))+
   geom_contour_filled()+
-  facet_wrap(~move.rate)
+  facet_wrap(~move.rate,ncol=5)
 
-ggplot(filter(S1_plot_df,asp.mag%in%1:20),aes(x=clim.sd,y=agg.lt.pop.lam,color=factor(asp.mag)))+
+p15 <- ggplot(filter(S2_plot_df, move.rate %in% move.rates),aes(x=clim.sd,y=asp.mag,z=agg.lt.pop.lam))+
+  geom_contour_filled()+
+  facet_wrap(~move.rate,ncol=5)
+
+cowplot::plot_grid(p11,p15,ncol = 1)
+
+ggplot(filter(S1_plot_df,asp.mag%in%c(0,5,10,15,20)&move.rate%in%move.rates),aes(x=clim.sd,y=agg.lt.pop.lam,color=factor(asp.mag)))+
   geom_smooth()+
   facet_wrap(~move.rate)
 
-ggplot(filter(S1_plot_df,asp.mag==16),aes(x=clim.sd,y=agg.lt.pop.lam,color=factor(move.rate)))+
-  geom_smooth()
+ggplot(filter(S1_plot_df,asp.mag%in%c(0,5,10,15)),aes(x=clim.sd,y=agg.lt.pop.lam,color=factor(move.rate)))+
+  geom_smooth(se=F)+
+  facet_wrap(~asp.mag)
 
-ggplot(filter(df,year>100),aes(x=year,y=pop.lam))+
-  geom_point()
+ggplot(filter(S1_plot_df,asp.mag%in%c(0,5,10,15)&move.rate%in%move.rates),
+       aes(x=clim.sd,y=agg.pop.var,color=factor(move.rate)))+
+  geom_smooth(se=F)+
+  facet_wrap(~asp.mag)
 
+
+ggplot(filter(S1_plot_df,asp.mag%in%c(0,5,10,15,20)&move.rate%in%move.rates),
+       aes(x=clim.sd,y=mean.corr,color=factor(move.rate)))+
+  geom_line()+
+  facet_wrap(~asp.mag)
+
+ggplot(filter(S1_plot_df,move.rate==0&asp.mag%in%seq(8,20,2)),
+       aes(x=clim.sd,y=mean.corr,color=factor(asp.mag)))+
+  geom_line(se=F,linewidth=2)+
+  scale_color_viridis_d()+
+  theme_bw()
+
+ggplot(filter(S1_plot_df,move.rate==0),aes(x=clim.sd,y=asp.mag,z=mean.corr))+
+  geom_contour_filled()+
+  theme_bw()
+
+ ggplot(filter(S1_plot_df,move.rate==0&clim.sd!=0),aes(x=asp.mag,y=mean.corr))+
+  geom_point()+
+  geom_smooth()+
+  facet_wrap(~clim.sd)+
+  geom_vline(xintercept = 12)+
+  theme_bw()
+
+ggplot(filter(S1_plot_df,move.rate==0.1),aes(y=mean.corr,x=agg.lt.pop.lam))+
+  geom_line()+
+  facet_wrap(~asp.mag)+
+  theme_bw()
+
+library(viridisLite)
 ```
 
+## adding in climate autocorrelation
 ```{r}
+rm(list=ls())
+years <- 100
+clim.sd <- 1
+e_old <- rnorm(1,mean=0,sd=clim.sd)
+rho <- 0.5
+
+clims <- data.frame(years = 1:100,
+                    clim = NA,
+                    clim.cor = NA)
 
 
+for(i in 1:years){
+  
+  # Random climate draw for this year
+  z_t <- rnorm(1,mean=0,sd=clim.sd)
+  
+  # store that for comparison
+  clims$clim[i] <- z_t
+  
+  # M&D equation 4.16 (pg. 139) 
+  e_new <- rho*e_old + clim.sd*(1 - rho^2)^(1/2)*z_t
+  
+  # Store that
+  clims$clim.cor[i] <- e_new
+  
+  # Make this years adjusted clim last years
+  e_old <- e_new
+  
+  # Remove this years
+  rm(e_new)
+  
+}
+
+ggplot(clims,aes(x = years))+
+  geom_line(aes(y=clim,color="clim"),linewidth=3,alpha=0.5)+
+  geom_line(aes(y=clim.cor,color="clim.cor"))+
+  ggthemes::theme_clean()+
+  scale_color_manual(values=c("salmon2","black"))
 ```
 
 
