--- a/ManuFigures.Rmd
+++ b/ManuFigures.Rmd
@@ -35,19 +35,21 @@ source("ModelFunctions/survival_fun.R")
 source("ModelFunctions/growth_fun.R")
 source("ModelFunctions/subpop_mx_fun.R")
 source("ModelFunctions/seednum_fun.R")
-seed_df = read_csv(file = "seedSearch_2024-11-13 07:46:55.337138.csv") %>% 
+seed_df <- read_csv("seedSearch_2024-11-14 09:27:34.519536.csv") %>% 
+  rbind(.,read_csv("seedSearch_2024-11-14 10:03:24.033834.csv")) %>% 
+  mutate(seeds2 = floor(seeds)) %>% 
   group_by(asp.mag) %>% 
-  summarise(avg.seeds = mean(seeds))
+  summarize(avg.seeds = round(mean(seeds)))
 ```
 
 ## Figure 2. No, med, high asp effect demo
 ```{r}
 
-asp.effects = c(-1,1)
+asp.effects = c(-1,-5)
 n.subpops = length(asp.effects)
 start.cells = seq(1,n.subpops*3,by=3)
 
-lam_df = expand.grid(asp.mag = 20,
+lam_df = expand.grid(asp.mag = c(1,10,20),
                      clim = seq(-50,50,1),
                      s1 = NA, s2 = NA, pop=NA)
 
@@ -74,6 +76,16 @@ for(i in 1:nrow(lam_df)){
   
 }
 
+ggplot(lam_df,aes(x=clim))+
+  geom_line(aes(y=s1,color="s1"))+
+  geom_line(aes(y=s2,color="s2"))+
+  # geom_line(aes(y=pop,color="pop"))+
+  theme_bw(base_size = 16)+
+  scale_x_continuous(limits = c(-50,50))+
+  theme(legend.position = "none")+
+  labs(title=paste0("Microhabitat shift values = ",list(asp.effects)))+
+  facet_wrap(~asp.mag,ncol=1)
+
 lams <- ggplot(lam_df,aes(x=clim))+
   geom_line(aes(y=s1,color="s1"))+
   geom_line(aes(y=s2,color="s2"))+
@@ -82,6 +94,7 @@ lams <- ggplot(lam_df,aes(x=clim))+
   scale_x_continuous(limits = c(-50,50))+
   theme(legend.position = "none")+
   labs(title="Aspect mag = 20")
+lams
 
 hist <- ggplot(data=data.frame(clim=rnorm(10^6,0,15)),aes(x=clim))+
   geom_histogram(fill="grey75",color="white",bins=50)+
